completed request and updated readme file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
-    <div class="basictext">Hello world</div>
+    <div class="root" style="display: flex;">
+        <div class='innerDiv' >
+            <h1>We're here to help you with you legal services, when you need us.</h1>
+            <p>For the big matters and the small we offer you a range of legal services that are built around what you need. Simple, straightforward, human and fair</p>
+            <a href="https://google.com" class="button"><button>Popular services</button></a>
+        </div>
+        <div class='innerDiv'>
+            <img class='mainImg' src="https://sguk-uks-mkt-web-prod-02-cdn-endpoint-assets.azureedge.net/public/images/bitmap/large/157417321.jpg?version=20200720.1" alt="Image" width='100%' height='100%'>
+        </div>
+    </div>
 </body>
 
 </html>
